# open-creator

./: .gitignore  .readthedocs.yaml  404.html  CONTRIBUTING.md  CONTRIBUTING_JP.md  CONTRIBUTING_ZH.md  LICENSE  README.md  README_JA.md  README_ZH.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml
api_doc/: index.html
commands/: index.html
configurations/: index.html
creator/: .env_template  __init__.py  cli.py  config.yaml  core.py  creator.py  utils.py
docs/: Usage.md  api_doc.md  commands.md  configurations.md  examples.md  index.md  installation.md  skill-library-hub.md
example_messages/: example1.json
examples/: 01_skills_create.ipynb  03_skills_search.ipynb  04_skills_run.ipynb  05_skills_test.ipynb  06_skills_refactor.ipynb  07_skills_auto_optimize.ipynb  index.html
installation/: index.html
search/: search_index.json
skill-library-hub/: index.html
tests/: function_call_schema.json  skill_example.json  skill_schema_example.json  test_auto_optimize.py  test_buffer_manager.py  test_calculator.py  test_cli.py  test_code_interpreter.py  test_code_tester_agent.py  test_config_change.py  test_creator.py  test_creator_agent.py  test_extractors.py  test_interpreter.py  test_interpreter_agent.py  test_key_bind.py  test_library_config.py  test_load_config.py  test_loading.py  test_messages_skill_extractor_agent.py  test_multiline_input.py  test_nest_funciton.py  test_plan.md  test_redirect_output.py  test_refactor_agent.py  test_repl_client.py  test_repl_client_backup.py  test_safe_python.py  test_skill_schema.py  (+2 more)
(+264 files in other folders)
