[tool.poetry]
name = "open-creator"
packages = [
    {include = "creator"},
]
version = "0.1.0"
description = "Build your costomized skill library"
authors = ["JunminGONG <junmingong@qq.com>"]
readme = "README.md"
include = ["creator/config.yaml"]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.5.2"
langchain = "^0.0.297"
huggingface_hub = "^0.17.2"
loguru = "^0.7.2"
pydantic = "^2.0.3"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
tiktoken = "^0.4.0"
prompt_toolkit = "^3.0.39"
inquirer = "^3.1.3"
pyyaml = "^6.0.1"
appdirs = "^1.4.4"
litellm = "^0.1.590"

[tool.poetry.dependencies.pyreadline3]
version = "^3.4.1"
markers = "sys_platform == 'win32'"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
creator = "creator:cli"